# mirai-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
db/: schema.sql
notebooks/: hospital_eda.ipynb
src/mirai_analytics/: cli.py
src/mirai_analytics/analytics/: loaders.py  operations.py  rejections.py
src/mirai_analytics/data/: synthetic.py
src/mirai_analytics/db/: load.py
src/mirai_analytics/ingest/: nwh_billing.py
src/mirai_analytics/models/: __init__.py  claim.py  encounter.py  lab_result.py  patient.py  prescription.py
tests/: test_analytics.py  test_claim.py  test_encounter.py  test_lab_result.py  test_loaders.py  test_nwh_billing.py  test_patient.py  test_prescription.py
