[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirai-analytics"
version = "0.1.0"
description = "Healthcare data activation platform for African hospitals"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text="Proprietary"}
authors = [{ name = "Jeremy Ngugi", email = "jeremy.w.ngugi@gmail.com" }]
keywords = ["healthcare", "analytics", "kenya", "hospital", "ml"]

dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "streamlit>=1.38",
    "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipython>=8.22",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/mirai-health-group/mirai-analytics"
Repository = "https://github.com/mirai-health-group/mirai-analytics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_decorators = false
[[tool.mypy.overrides]]
module = "dashboard"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=mirai_analytics",
    "--cov-report=term-missing",
    "--cov-report=html",
]
